deploy/k8s-cloud/apps/24-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: hda-alb
spec:
  controllerName: gateway.k8s.aws/alb
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hda-gateway
  namespace: hda
spec:
  gatewayClassName: hda-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: hda-gateway-lbconfig
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trabajos-service-route
  namespace: hda
spec:
  parentRefs:
    - name: hda-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /trabajos
      backendRefs:
        - name: trabajos-service
          port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: usuarios-service-route
  namespace: hda
spec:
  parentRefs:
    - name: hda-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /usuarios
      backendRefs:
        - name: usuarios-service
          port: 8084
